refactor Sudoku generation to use ArrayList<Pair<Integer, Integer>> and improve formatting and fix solveUsingRules